--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,6 +7,10 @@
     <title>OptDemo - {% block title %}Optimization Demo{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css" integrity="sha384-Xi8rHCmBmhbuyyhbI88391ZKP2dmMAxhJoft3CasYGJh30SyrrZcVw7A0_H_H2QT" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js" integrity="sha384-X/XCf82sK5Hqf8S_sUfLL3K2uR3T1gWJq_nEaM6A_I1S8/3oU8G10J/F_wLpG+e" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHfLlzOASDNiYoffsetKjffqc_F_Wr_dpL_YF_MScfF_L" crossorigin="anonymous"
+    onload="renderMathInElement(document.body,{delimiters: [{left: '$$', right: '$$', display: true},{left: '$', right: '$', display: false},{left: '\\(', right: '\\)', display: false},{left: '\\[', right: '\\]', display: true}]});"></script>
     {% block styles %}
     {# 여기에 small_scale_demo.html의 스타일이 삽입됩니다. #}
     {% endblock styles %}
@@ -79,6 +83,9 @@
                             </li>
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'vrp_demo' %}active{% endif %}" href="{% url 'routing_logistics_app:vrp_demo' %}">Demo</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'vrp_advanced' %}active{% endif %}" href="{% url 'routing_logistics_app:vrp_advanced' %}">Advanced</a>
                             </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Capacitated VRP - CVRP</strong></li>
                             <li class="nav-item nested">
