1. cvrp demo introduction

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -85,10 +85,10 @@
                             </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Capacitated VRP - CVRP</strong></li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'cvrp_introduction' %}active{% endif %}" href="{% url 'routing_logistics_app:cvrp_introduction' %}">Introduction(준비중)</a>
+                                <a class="nav-link {% if active_submenu == 'cvrp_introduction' %}active{% endif %}" href="{% url 'routing_logistics_app:cvrp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'cvrp_demo' %}active{% endif %}" href="{% url 'routing_logistics_app:cvrp_demo' %}">Demo(준비중)</a>
+                                <a class="nav-link {% if active_submenu == 'cvrp_demo' %}active{% endif %}" href="{% url 'routing_logistics_app:cvrp_demo' %}">Demo</a>
                             </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Pickup and Delivery Problem- PDP</strong></li>
                             <li class="nav-item nested">
